--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@ iframe {
 
 .container {
     max-width: 1660px;
-    margin: auto;
+    margin: 20px auto;
 }
 
 .mb-3 {
@@ -69,4 +69,3 @@ iframe {
     align-items: center;
     justify-content: space-between;
 }
-
