--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,6 +7,8 @@
 
 .footer-container {
     text-align: center;
+    max-width: 1660px;
+    margin: 20px auto;
 }
 
 .footer-row {
@@ -57,12 +59,12 @@
 .fa-instagram:hover {
     color: transparent;
     background: radial-gradient(
-    circle at 30% 107%,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
+        circle at 30% 107%,
+        #fdf497 0%,
+        #fdf497 5%,
+        #fd5949 45%,
+        #d6249f 60%,
+        #285aeb 90%
     );
     background-clip: text;
     -webkit-background-clip: text;
