--- a/src/styles/signIn.css
+++ b/src/styles/signIn.css
@@ -1,3 +1,4 @@
+/* General Styles */
 .div-left {
     background: #343a40;
     border-top-left-radius: 14px;
@@ -6,14 +7,6 @@
 
 .neg-margin {
     margin-top: -2px;
-}
-
-.img-container {
-    margin-top: 10%;
-    padding-right: 0px;
-    text-align: center;
-    -webkit-animation: mover 2s infinite alternate;
-    animation: mover 1s infinite alternate;
 }
 
 .rocket {
